<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * Part of the Asimi project - http://sudarmuthu.com/arduino/asimi
 * 
 * Copyright 2011  Sudar Muthu  (email : sudar@sudarmuthu.com)
 *
 * ==============================================================================
 * "THE BEER-WARE LICENSE" (Revision 42):
 * <sudar@sudarmuthu.com> wrote this file. As long as you retain this notice you
 * can do whatever you want with this stuff. If we meet some day, and you think
 * this stuff is worth it, you can buy me a beer or coffee in return - Sudar
 * ==============================================================================
 */
 -->

<resources>
    <string name="hello">Hello World, Accelerometer!</string>
    <string name="app_name">Asimi Bot Controller</string>
    <string name="startBot">Start Bot</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="stopBot">Stop Bot</string>
    <string name="engageMissile">Engage Missile</string>
    <string name="dismissMissile">Dismiss Missile</string>
    <string name="voice">Voice Control</string>    
</resources>
