<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * Part of the Sumi project - http://sudarmuthu.com/arduino/sumi
 * 
 * Copyright 2011  Sudar Muthu  (email : sudar@sudarmuthu.com)
 * ==============================================================================
 * "THE BEER-WARE LICENSE" (Revision 42):
 * <sudar@sudarmuthu.com> wrote this file. As long as you retain this notice you
 * can do whatever you want with this stuff. If we meet some day, and you think
 * this stuff is worth it, you can buy me a beer or coffee in return - Sudar
 * ==============================================================================
 */
 -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="horizontal" android:id="@+id/entireLayout">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/left" android:id="@+id/left"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/up" android:id="@+id/up"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/down" android:id="@+id/down"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/right" android:id="@+id/right"></TextView>
    </LinearLayout>    
   
    <TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:stretchColumns="0|1"
    	android:layout_gravity="center_vertical|center_horizontal">
    
    	<TableRow>
	    	<Button android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" android:text="@string/startBot" android:id="@+id/controlBot"></Button>
    	</TableRow>
    	    	
       	<TableRow>
   		     <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/engageMissile" android:id="@+id/controlMissile"></Button>    	
    	</TableRow>
    	    
    </TableLayout>
</merge>